Fixed a bug with the toast covering the page navigation component

--- a/src/app/shared/components/toast/toast.component.css
+++ b/src/app/shared/components/toast/toast.component.css
@@ -46,7 +46,7 @@
 }
 
 .hide {
-    z-index: 0;
+    z-index: -1;
     opacity: 0;
     transform: translateY(20px);
     transition: opacity 1s, transform 1s;
